# mesh-agent

./: .gitignore  Dockerfile  README.md  flake.nix  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py
app/routes/: chat.py  config.py  workspace.py
app/static/css/: style.css
app/static/js/: app.js
app/templates/: base.html  chat.html  config.html  terminal.html  workspace.html
linerun/: README.md  pyproject.toml
linerun/linerun/: __init__.py  agent.py  workspace.py
linerun/linerun/providers/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  openai.py
linerun/tests/: test_agent.py  test_providers.py  test_workspace.py
