[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mesh-agent"
version = "0.1.0"
description = "FastAPI web application exposing the Mesh-Agent and playground environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "linerun",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
